[package]
name = "mosaic-hub"
version = "0.1.0"
edition = "2021"

[features]
default = []
# turn on when compiling for browsers while waiting for webgpu
# to get proper support
	webgl = ["wgpu/webgl"]

[dependencies]
winit = { version = "0.30.8" }
env_logger = {version = "0.11.5"}
log = { version = "0.4.22"}
wgpu = { version = "24.0.1"}
pollster = {version ="0.4.0"}
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
web-sys = { version = "0.3.77", features = ["Window", "Performance"] }
lazy_static = "1.5.0"
plinth-core = "0.1.0"
plinth-util = "0.1.0"
mosaic-model = "0.1.1"
bytemuck = "1.22.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wasm-bindgen-futures = "0.4.49"


